  28 and older the calling convention was ~(assoc KEY ALIST)~. In order to use the
  new calling convention you can use ~(compat-call assoc KEY ALIST)~.
- Deprecate all ~compat-*~ prefixed functions. Instead use the aforementioned
  ~compat-call~ or ~compat-function~ macros.
- Deprecate ~compat-help.el~ and ~compat-font-lock.el~
- Drop support for Emacs 24.3

* Release of "Compat" Version 28.1.2.2

This is a minor release that hopes to address [[compat:7]].

(Release <2022-08-25 Thu>)

* Release of "Compat" Version 28.1.2.1

This is a minor release adding the following changes:

- Add =derived-mode-p= defined in Emacs 27
- Add =provided-mode-derived-p= defined in Emacs 27
- Add =read-multiple-choice= defined in Emacs 26
- Add =file-name-absolute-p= defined in Emacs 28

The only other notable change is that the manual has been rewritten to
include much more documentation that had been the case previously.

(Release <2022-08-24 Wed>)

* Release of "Compat" Version 28.1.2.0

The main change of this release has been the major simplification of
Compat's initialisation system, improving the situation around issues
people had been reporting ([[compat:4]], once again) with unconventional
or unpopular packaging systems.

In addition to this, the following functional changes have been made:

- Fix =format-prompt= of an empty string as "default" argument
- Add =decoded-time-period= defined in Emacs 28
- Add =subr-primitive-p= defined in Emacs 28

Minor improvements to manual are also part of this release.

(Release <2022-07-18 Mon>)

* Release of "Compat" Version 28.1.1.3

This release just contains a hot-fix for an issue introduced in the
last version, where compat.el raises an error during byte compilation.
See [[compat:4]].

(Release <2022-06-19 Sun>)

* Release of "Compat" Version 28.1.1.2

Two main changes have necessitated a new patch release:

1. Fix issues related to the loading of compat when uncompiled.  See