@@ -1693,17 +1693,6 @@
                  ))
     (should-not (string-match-p regexp-unmatchable str))))
 
-(ert-deftest func-arity ()
-  (should-equal '(0 . 0) (func-arity (lambda ())))
-  (should-equal '(1 . 1) (func-arity (lambda (x) x)))
-  (should-equal '(1 . 2) (func-arity (lambda (x &optional _) x)))
-  (should-equal '(0 . many) (func-arity (lambda (&rest _))))
-  (should-equal '(1 . 1) (func-arity 'identity))
-  (should-equal '(0 . many) (func-arity 'ignore))
-  (should-equal '(2 . many) (func-arity 'defun))
-  (should-equal '(2 . 3) (func-arity 'defalias))
-  (should-equal '(1 . unevalled) (func-arity 'defvar)))
-
 ;; TODO fix broken test
 ;;(ert-deftest directory-files-recursively
 ;;  (should-equal
